# mysh

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
cpio/: Makefile  build.sh
doc/: RunOnVM.md
includes/: builtin.h  color.h  defines.h  exec.h  token.h  user.h  vars.h  version.h
src/: main.c
src/tests/: onefile.c
src/tools/: echo.c  ls.c
src/utils/: builtin.c  exec.c  user.c  version.c
workspaces/: Makefile  README.md
